# AGI

./: .gitattributes  .gitignore  Dockerfile  README.md  ci.yml  download_weights.py  nightly_snapshot.sh  pyproject.toml  pytest  requirements.txt  router.py  scoreboard.py  seccomp_profile.json  skill_manifest.json
.devcontainer/: devcontainer.json
.github/actions/trivy-action/: action.yml
.github/workflows/: ci.yml
aginet/: log.py
client/: apply_delta.py  encrypt_utils.py  volunteer.py
data/: mscoco_captions_sample.txt
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOY.md
examples/: local_simulation.md
project_keys/: weights.key
scripts/: encrypt_dataset.py  run_sim.py
server/: README.md  fed_avg.py  generate_wu.py  keys.py  resource_sharder.py  result_template.xml  scheduler.py  setup_project.sh  validator.py  wu_template.xml
server/apps/: train_local.py
server/apps/common/: train_utils.py
server/apps/language/: README.md  train_local.py
server/apps/memory/: README.md  init_weights.txt  train_local.py
server/apps/planner/: README.md  (+1 more)
tests/: test_apply_delta.py  test_generate_wu.py  test_language_app.py  test_resource_sharder.py  test_router.py  test_scheduler.py  test_scoreboard.py  test_train_utils.py  test_validator.py  test_volunteer.py
wheelhouse/: MarkupSafe-3.0.2-cp313-cp313-win_amd64.whl  numpy-2.2.5-cp313-cp313-win_amd64.whl  pillow-11.2.1-cp313-cp313-win_amd64.whl  ruff-0.4.10-py3-none-win_amd64.whl  torch-2.7.0-cp313-cp313-win_amd64.whl  torchaudio-2.7.0-cp313-cp313-win_amd64.whl  torchvision-0.22.0-cp313-cp313-win_amd64.whl
(+2 files in other folders)
