[tool.poetry]
name = "agi-boinc"
version = "0.1.0"
description = "Decentralized AGI project running on BOINC"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31"
cryptography = "^46.0"
rich = "^13.7"
jinja2 = "^3.1"

# Optional heavyweight deps for worker images
torch = {version = "^2.2", optional = true}
torchvision = {version = "^0.17", optional = true}
torchaudio = {version = "^2.2", optional = true}

[tool.poetry.group.dev.dependencies]
ruff = "^0.4"
pytest = "^8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
